<resources>
    <string name="app_name">PinDialogLibrary</string>
    <string name="pin_dialog_title">Введите пин-код</string>
    <string name="pin_input_filled_indicator_description">Индикатор введенного символа</string>
    <string name="pin_pad_digit_1">1</string>
    <string name="pin_pad_digit_2">2</string>
    <string name="pin_pad_digit_3">3</string>
    <string name="pin_pad_digit_4">4</string>
    <string name="pin_pad_digit_5">5</string>
    <string name="pin_pad_digit_6">6</string>
    <string name="pin_pad_digit_7">7</string>
    <string name="pin_pad_digit_8">8</string>
    <string name="pin_pad_digit_9">9</string>
    <string name="pin_pad_digit_0">0</string>
    <string name="clear_all_button_text">Сброс</string>
</resources>
