<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/pin_dialog_background"
                android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/pin_dialog_title"
        android:textColor="@color/pin_dialog_title_color"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/pin_input_indicators_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pin_input_indicator"
            style="@style/input_indicator"
            android:contentDescription="@string/pin_input_indicator_description"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row1_pin_pad_digits_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pin_input_indicators_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pin_pad_digit_1"
            style="@style/pin_pad_button"
            android:text="@string/pin_pad_digit_1"/>

        <Button
            android:id="@+id/pin_pad_digit_2"
            style="@style/pin_pad_button"
            android:text="@string/pin_pad_digit_2"/>

        <Button
            android:id="@+id/pin_pad_digit_3"
            style="@style/pin_pad_button"
            android:text="@string/pin_pad_digit_3"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row1_pin_pad_digits_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/big_btn_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pin_pad_digit_4"
            style="@style/pin_pad_button"
            android:text="@string/pin_pad_digit_4"/>

        <Button
            android:id="@+id/pin_pad_digit_5"
            style="@style/pin_pad_button"
            android:text="@string/pin_pad_digit_5"/>

        <Button
            android:id="@+id/pin_pad_digit_6"
            style="@style/pin_pad_button"
            android:text="@string/pin_pad_digit_6"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/big_btn_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pin_pad_digit_7"
            style="@style/pin_pad_button"
            android:text="@string/pin_pad_digit_7"/>

        <Button
            android:id="@+id/pin_pad_digit_8"
            style="@style/pin_pad_button"
            android:text="@string/pin_pad_digit_8"/>

        <Button
            android:id="@+id/pin_pad_digit_9"
            style="@style/pin_pad_button"
            android:text="@string/pin_pad_digit_9"/>
    </LinearLayout>

    <Button
        android:id="@+id/pin_pad_digit_0"
        style="@style/pin_pad_button"
        android:layout_below="@+id/ll4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/big_btn_vertical_margin"
        android:text="@string/pin_pad_digit_0"/>

</RelativeLayout>