<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pin_dialog_background"
                android:gravity="center_vertical"
                android:orientation="vertical">

    <TextView
        android:id="@+id/operation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="Sample Internet Payment"
        android:textColor="@color/pin_dialog_title_color"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/operation_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/pin_dialog_title"
        android:textColor="@color/pin_dialog_title_color"
        android:textSize="14sp"/>

    <LinearLayout
        android:id="@+id/input_indicators_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/pin_pad_digit_1"
        style="@style/pin_pad_button"
        android:layout_alignTop="@+id/pin_pad_digit_2"
        android:layout_toLeftOf="@id/pin_pad_digit_2"
        android:layout_toStartOf="@id/pin_pad_digit_2"
        android:text="@string/pin_pad_digit_1"/>

    <Button
        android:id="@id/pin_pad_digit_2"
        style="@style/pin_pad_button"
        android:layout_below="@id/input_indicators_container"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/pin_pad_digit_2"/>

    <Button
        android:id="@+id/pin_pad_digit_3"
        style="@style/pin_pad_button"
        android:layout_alignTop="@id/pin_pad_digit_2"
        android:layout_toEndOf="@id/pin_pad_digit_2"
        android:layout_toRightOf="@id/pin_pad_digit_2"
        android:text="@string/pin_pad_digit_3"/>

    <Button
        android:id="@+id/pin_pad_digit_4"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_1"
        android:layout_alignStart="@id/pin_pad_digit_1"
        android:layout_alignTop="@+id/pin_pad_digit_5"
        android:text="@string/pin_pad_digit_4"/>

    <Button
        android:id="@id/pin_pad_digit_5"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_2"
        android:layout_alignStart="@id/pin_pad_digit_2"
        android:layout_below="@id/pin_pad_digit_2"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/pin_pad_digit_5"/>

    <Button
        android:id="@+id/pin_pad_digit_6"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_3"
        android:layout_alignStart="@id/pin_pad_digit_3"
        android:layout_alignTop="@id/pin_pad_digit_5"
        android:text="@string/pin_pad_digit_6"/>


    <Button
        android:id="@+id/pin_pad_digit_7"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_1"
        android:layout_alignStart="@id/pin_pad_digit_1"
        android:layout_alignTop="@+id/pin_pad_digit_8"
        android:text="@string/pin_pad_digit_7"/>

    <Button
        android:id="@id/pin_pad_digit_8"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_2"
        android:layout_alignStart="@id/pin_pad_digit_2"

        android:layout_below="@id/pin_pad_digit_5"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/pin_pad_digit_8"/>

    <Button
        android:id="@+id/pin_pad_digit_9"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_3"
        android:layout_alignStart="@id/pin_pad_digit_3"
        android:layout_alignTop="@id/pin_pad_digit_8"
        android:text="@string/pin_pad_digit_9"/>

    <Button
        android:id="@+id/pin_pad_digit_0"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_2"
        android:layout_alignStart="@id/pin_pad_digit_2"
        android:layout_below="@id/pin_pad_digit_8"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/pin_pad_digit_0"/>

    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="@dimen/big_btn_size"
        android:layout_height="@dimen/big_btn_size"
        android:layout_alignLeft="@id/pin_pad_digit_3"
        android:layout_alignTop="@id/pin_pad_digit_0"
        android:layout_alignStart="@id/pin_pad_digit_3"
        android:background="@drawable/pin_pad_backspace_button"
        android:paddingRight="3dp"
        android:src="@drawable/backspace_button_background_icon"/>

    <Button
        android:id="@+id/clear_all"
        android:layout_width="@dimen/big_btn_size"
        android:layout_height="@dimen/big_btn_size"
        android:layout_alignLeft="@id/pin_pad_digit_1"
        android:layout_alignStart="@id/pin_pad_digit_1"
        android:layout_alignTop="@id/pin_pad_digit_0"
        android:paddingTop="1dp"
        android:background="@drawable/pin_pad_backspace_button"
        android:text="@string/clear_all_button_text"/>
</RelativeLayout>